# CS446

./: .gitignore  README.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: access_time_solid_gray_16.xml  add_photo_solid_gray_24.xml  apartment_solid_gray_16.xml  arrow_drop_down_solid_gray_24.xml  arrow_drop_up_soild_gray_24.xml  bed_solid_gray_16.xml  chat_bubble_outline_gray_24.xml  chat_bubble_solid_pink_24.xml  close_filled_black_24.xml  directions_bike_solid_gray_24.xml  directions_bus_solid_gray_24.xml  directions_car_solid_gray_24.xml  ic_launcher.xml  (+16 more)
android/config/: detekt-config.yml
android/gradle/wrapper/: gradle-wrapper.properties
deploy/: Dockerfile
docs/arch/: Class-Diagram.drawio  Component-Diagram.drawio  RxJava-Streams-Listing-Details.drawio  Sequence-Diagram-Looking-for-Sublet.drawio  Sequence-Diagram.drawio  View-ViewModel-Flow.drawio  ViewModel-ChildViewModel-Diagram.drawio
docs/arch-style-examples/: Example-1-Layered.drawio  Example-2-Pipe-and-Filter.drawio  Example-3-Client-Server.drawio
docs/design-pattern-examples/: Example-1-Adapter.drawio  Example-2-Strategy.drawio  Example-3-Organizational-Entity.drawio
docs/swaggerui/: swagger-initializer.js
protos/auth/: login.proto
protos/user/: create.proto
scripts/: build_protobuf_kotlin  build_server  kotlin_build_openapi  openapi_build  server_run  server_run_production
server/: .rustfmt.toml  Cargo.toml  Dockerfile  Rocket.toml  build.rs
server/db/: store.db
server/migrations/2023-05-24-054054_users/: up.sql
server/migrations/2023-06-14-170117_listings/: down.sql  up.sql
server/migrations/2023-06-20-142214_listings_images/: down.sql  up.sql
server/migrations/2023-07-15-171901_listings_favourites/: down.sql  up.sql
server/migrations/2023-07-15-174141_user_ratings/: down.sql  up.sql
server/migrations/2023-07-19-001411_user_avatars/: down.sql  up.sql
server/migrations/2023-07-22-001609_user_verified/: down.sql  up.sql
server/src/: cors.rs  error.rs  macros.rs  main.rs  proto.rs  schema.rs  state.rs
server/src/api/: constants.rs  mod.rs  token.rs  utils.rs
server/src/api/auth/: mod.rs  model.rs
server/src/api/geocode/: mod.rs
server/src/api/listings/: images.rs  mod.rs
server/src/api/model/: auth.rs  geocode.rs  listing.rs  mod.rs  user.rs
server/src/api/user/: avatar.rs  mod.rs  rating.rs  verify.rs
server/src/db/: mod.rs  paginate.rs  schema.rs  schema_view.rs
server/src/db/model/: listings.rs  mod.rs  users.rs
server/src/geocode/: mod.rs  opencage.rs
server/src/model/: auth.rs  user.rs  users.rs
server/src/proto/: auth.rs  mod.rs  user.rs
timelogs/: benedito-andre.md  cui-jiaying.md  hu-henry.md  lee-min-kyu.md  lin-pei-xi.md  sharma-abhay.md
(+233 files in other folders)
