[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = { version = "=0.4.22", features = ["serde"] }
data-encoding = { version = "=2.3.2" }
diesel = { version = "=2.0.4", features = ["r2d2", "sqlite"] }
jsonwebtoken = { version = "=8.2.0" }
log = { version = "=0.4.17" }
prost = { version = "=0.11.5" }
rand = { version = "=0.8.5" }
ring = { version = "=0.16.20" }
rocket = { version = "=0.5.0-rc.2", features = [ "json" ] }
r2d2 = { version = "=0.8.10" }
serde = { version = "=1.0.152" }
serde_derive = { version = "=1.0.152" }
serde_json = { version = "=1.0.92" }
thiserror = { version = "=1.0.40" }
tokio = { version = "=1.25.0" }

[build-dependencies]
itertools = { version = "=0.10.5" }
log = { version = "=0.4.17" }
prost = { version = "=0.11.5" }
prost-build = { version = "=0.11.5" }
prost-types = { version = "=0.11.5" }
tempfile = { version = "=3.5.0" }
