[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

okapi = { version = "=0.7.0-rc.1" }
rocket = { version = "=0.5.0-rc.2", features = ["json", "uuid"] }
rocket_okapi = "=0.8.0-rc.2"
schemars = { version = "=0.8.10", features = ["chrono"] }

chrono = { version = "=0.4.22", features = ["serde"] }
data-encoding = { version = "=2.3.2" }
diesel = { version = "=2.0.4", features = ["chrono", "r2d2", "sqlite"] }
infer = { version = "=0.13.0" }
jsonwebtoken = { version = "=8.2.0" }
log = { version = "=0.4.17" }
rand = { version = "=0.8.5" }
ring = { version = "=0.16.20" }
r2d2 = { version = "=0.8.10" }
serde = { version = "=1.0.152" }
serde_derive = { version = "=1.0.152" }
serde_json = { version = "=1.0.92" }
thiserror = { version = "=1.0.40" }
tokio = { version = "=1.25.0" }
uuid = { version = "=1.3.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "=0.24.2", features = ["bundled"] }

[profile.release]

codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
